--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "lite-server",
-    "sass": "sass --watch --style compressed src/scss:dist/css"
+    "sass": "sass --watch --style compressed src/scss:public/css"
   },
   "keywords": [],
   "author": "",
